Spacing and readability fixes

--- a/applications/rightnow/custom-styles.scss
+++ b/applications/rightnow/custom-styles.scss
@@ -484,9 +484,9 @@ h1.page__title * {
 .panel-pane__content .rn_FieldDisplay {
   margin-left: 0;
 }
-.panel-pane__content h1 {
+// .panel-pane__content h1 {
 //  font-weight: 800;
-}
+// }
 
 a {
   color: $accent-color;
